<?xml version="1.0" encoding="UTF-8"?>
<!--
  ~ Copyright 2023-present the original author or authors.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~      https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.ai</groupId>
		<artifactId>spring-ai-parent</artifactId>
		<version>2.0.0-M6</version>
		<relativePath>../../pom.xml</relativePath>
	</parent>
	<artifactId>spring-ai-azure-store</artifactId>
	<packaging>jar</packaging>
	<name>Spring AI Vector Store - Azure AI Search </name>
	<description> Spring AI Vector Store - Azure AI Search  </description>
	<url>https://github.com/spring-projects/spring-ai</url>

	<scm>
		<url>https://github.com/spring-projects/spring-ai</url>
		<connection>scm:git:git://github.com/spring-projects/spring-ai.git</connection>
		<developerConnection>scm:git:ssh://git@github.com/spring-projects/spring-ai.git</developerConnection>
	</scm>

	<properties>
		<maven.compiler.target>17</maven.compiler.target>
		<maven.compiler.source>17</maven.compiler.source>
	</properties>

	<dependencies>
		<dependency>
			<groupId>org.springframework.ai</groupId>
			<artifactId>spring-ai-vector-store</artifactId>
			<version>${project.parent.version}</version>
		</dependency>
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-search-documents</artifactId>
			<version>${azure-search.version}</version>
			<exclusions>
				<!-- exclude this to avoid changing the default serializer and the null-value behavior -->
				<exclusion>
					<groupId>com.azure</groupId>
					<artifactId>azure-core-serializer-json-jackson</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.azure/azure-identity -->
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-identity</artifactId>
			<version>${azure-identity.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.azure/azure-core -->
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-core</artifactId>
			<version>${azure-core.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/com.azure/azure-json -->
		<dependency>
			<groupId>com.azure</groupId>
			<artifactId>azure-json</artifactId>
			<version>${azure-json.version}</version>
		</dependency>
		<dependency>
			<groupId>com.alibaba.fastjson2</groupId>
			<artifactId>fastjson2</artifactId>
			<version>${fastjson2.version}</version>
		</dependency>

		<!-- TESTING -->
		<dependency>
			<groupId>org.springframework.ai</groupId>
			<artifactId>spring-ai-transformers</artifactId>
			<version>${project.parent.version}</version>
			<scope>test</scope>
		</dependency>

		<!-- Contains sample test data -->
		<dependency>
			<groupId>org.springframework.ai</groupId>
			<artifactId>spring-ai-test</artifactId>
			<version>${project.parent.version}</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-configuration-processor</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.awaitility</groupId>
			<artifactId>awaitility</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>io.micrometer</groupId>
			<artifactId>micrometer-observation-test</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>
</project>
